--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,9 @@ spring:
     multipart:
       max-file-size: -1
       max-request-size: -1
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/zdyf?serverTimezone=GMT&useSSL=false
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
