--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "shebang-command": "^2.0.0",
     "vue": "^2.6.11",
     "vue-router": "3.0.7"
   },
