--- a/ds/.env
+++ b/ds/.env
@@ -1,6 +1,6 @@
 # .env serve 的环境变量
 # https://segmentfault.com/a/1190000017008697
 
-# api 的基础 url
-VUE_APP_DEV_URL = "/api/"
+# 网络请求的 api 的基础 url
+VUE_APP_DEV_URL = "/dev/"
 VUE_APP_PRO_URL = "/abe/"
