支持多个前端
更新 gitignore
更新文档

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 logging:
   config: classpath:logback-spring.xml
+  level:
+    org:
+      springframework: DEBUG
 atp:
   devMode:
     peerName: peer
