--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -20,6 +20,8 @@ atp:
  #   baseUrl: http://101.201.49.180:8000
     baseUrl: http://47.94.164.138:8000
 
+    dpkiUrl: http://10.176.40.47/dpki
+
   path:
     dabeUser: atp/user/
     privateKey: atp/priKey/
