--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,17 +10,18 @@ atp:
 #    peerUrl: grpc://192.168.31.128:7051
 #    peerUrl: grpc://8.133.190.119:7051
 #    peerUrl: grpc://127.0.0.1:7051
-    peerUrl: grpc://10.176.40.46:7051
+    peerUrl: grpc://10.131.131.3:7051
 #    peerUrl: grpc://10.177.88.201:7051
 #    ordererUrl: grpc://192.168.31.128:7050
 #    ordererUrl: grpc://8.133.190.119:7050
-    ordererUrl: grpc://10.176.40.46:7050
+    ordererUrl: grpc://10.131.131.3:7050
 #    ordererUrl: grpc://10.177.88.201:7050
     channelName: myc
  #   baseUrl: http://101.201.49.180:8000
-    baseUrl: http://47.94.164.138:8000
+    baseUrl: http://10.131.131.230:8083
 
-    dpkiUrl: http://10.176.40.47/dpki
+    dpkiUrl: http://10.131.131.125/dpki
+  #dpkiUrl: http://10.176.40.47/dpki
 
   path:
     dabeUser: atp/user/
