更改配置文件

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,18 +10,18 @@ atp:
 #    peerUrl: grpc://192.168.31.128:7051
 #    peerUrl: grpc://8.133.190.119:7051
 #    peerUrl: grpc://127.0.0.1:7051
-    peerUrl: grpc://10.176.40.46:7051
+    peerUrl: grpc://192.168.3.78:7051
 #    peerUrl: grpc://10.177.88.201:7051
 #    ordererUrl: grpc://192.168.31.128:7050
 #    ordererUrl: grpc://8.133.190.119:7050
-    ordererUrl: grpc://10.176.40.46:7050
+    ordererUrl: grpc://192.168.3.78:7050
 #    ordererUrl: grpc://10.177.88.201:7050
     channelName: myc
  #   baseUrl: http://101.201.49.180:8000
-    baseUrl: http://47.94.164.138:8000
+#    baseUrl: http://47.94.164.138:8000
 
   #  dpkiUrl: http://10.131.131.125/dpki
-    dpkiUrl: http://10.176.40.47/dpki
+    dpkiUrl: http://192.168.3.53/dpki
 
   path:
     dabeUser: atp/user/
@@ -40,7 +40,7 @@ spring:
       max-request-size: -1
 
   datasource:
-    url: jdbc:mysql://10.176.40.46:3306/zdyf?serverTimezone=GMT&useSSL=false
+    url: jdbc:mysql://192.168.3.78:3306/zdyf?serverTimezone=GMT&useSSL=false
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
