--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ atp:
     peerUrl: grpc://192.168.3.78:7051
     ordererUrl: grpc://192.168.3.78:7050
     channelName: myc
-    baseUrl: http://47.94.164.138:8000
+#    baseUrl: http://47.94.164.138:8000
 
 #    dpkiUrl: http://10.176.40.47/dpki
 
