--- a/ds/jsconfig.json
+++ b/ds/jsconfig.json
@@ -3,7 +3,7 @@
         "./src/**/*"
     ],
     "exclude": [
-        "node_modules",
+        "node_modules"
     ],
     "compilerOptions": {
         "baseUrl": ".",
