--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,12 +7,15 @@ atp:
   devMode:
     peerName: peer
     ordererName: orderer
-    peerUrl: grpc://180.167.127.16:7051
-    ordererUrl: grpc://180.167.127.16:7050
+#    peerUrl: grpc://180.167.127.16:7051
+#    ordererUrl: grpc://180.167.127.16:7050
+    peerUrl: grpc://10.176.40.70:7051
+    ordererUrl: grpc://10.176.40.70:7050
     channelName: myc
 #    baseUrl: http://47.94.164.138:8000 # 和华科对接
 
 #    dpkiUrl: http://10.176.40.47/dpki  # 课题二(dpki)的
+    couchdbUrl: http://10.176.40.70:5984
 
   path:
     dabeUser: atp/user/
@@ -40,7 +43,8 @@ spring:
     # gbase驱动
     driver-class-name: org.postgresql.Driver
     # 15432 是gbase的默认端口
-    url: jdbc:postgresql://180.167.127.16:15432/postgres
+#    url: jdbc:postgresql://180.167.127.16:15432/postgres
+    url: jdbc:postgresql://10.176.40.70:15432/postgres
     username: gaussdb
     password: Root@123
 
